--- a/public/assets/styles/global.css
+++ b/public/assets/styles/global.css
@@ -5,11 +5,21 @@
     background: #FFF;
 }
 
-.image-banner{
-    width: 100%;
-    height: 20vh;
+body{
+    min-height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
-    background-image: url("https://i.dailymail.co.uk/i/newpix/2018/03/26/15/4A92DD3F00000578-0-image-a-62_1522076120466.jpg");
+    background-position: top;
+    background-image: url("https://i.pinimg.com/originals/b5/ae/97/b5ae97129226cac374b1f585f2cea7e7.jpg");
+}
+
+@media (min-width: 992px) {
+    .rounded-lg-pill{
+        border-radius: 50rem !important;
+    }
+}
+
+.rounded-bottom-pill-fixed{
+    border-bottom-right-radius: 150px;
+    border-bottom-left-radius: 150px;
 }
