--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -8,8 +8,12 @@
 
 {% block body %}
     <div class="image-banner"></div>
-    <div class="container mt-3">
+    <div class="container mt-3 bg-dark text-white rounded-0 rounded-lg-pill p-3 col-12 col-lg-8">
         <h1 class="font-weight-bold text-center">Welkom op onze site</h1>
-        <h3 class="text-center">Log in om alle informatie over de mooiste auto's te bekijken!</h3>
+        {% if app.user %}
+            <h3 class="text-center">Bekijk <a class="text-info" href="{{ path('cars') }}">hier</a> ons aanbod !</h3>
+        {% else %}
+            <h3 class="text-center">Log in om alle informatie over ons auto aanbod te bekijken!</h3>
+        {% endif %}
     </div>
 {% endblock %}
